--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -1,13 +1,9 @@
+# Set up all of the CI env vars required for Couchers
 runs:
   using: "composite"
   steps:
+    # Get clean environment variables via https://github.com/marketplace/actions/github-environment-variables-action
     - uses: FranzDiebold/github-env-vars-action@v2
     - shell: bash
       run: |
-        echo "SLUG=$CI_REF_SLUG-$CI_SHA_SHORT" >> $GITHUB_ENV
-      # echo "DO_CHECKS=true" >> $GITHUB_ENV
-      # echo "BUILD_SLOW=true" >> $GITHUB_ENV
-      # echo "PREVIEW_DOMAIN=preview.couchershq.org" >> $GITHUB_ENV
-      # cho "GIT_DEPTH=10" >> $GITHUB_ENV
-      # echo "RELEASE_BRANCH=develop" >> $GITHUB_ENV
-      # echo "MOBILE_APP_PREVIEW_RELEASE_TAG=current-preview" >> $GITHUB_ENV
+        echo "SLUG=CI_SHA" >> $GITHUB_ENV
