--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -1,9 +1,24 @@
 # Set up all of the CI env vars required for Couchers
+outputs:
+  environment_name: ${{ steps.set-envs.outputs.envname }}
+  environment_url: ${{ steps.set-envs.outputs.envurl }}
 runs:
   using: "composite"
   steps:
     # Get clean environment variables via https://github.com/marketplace/actions/github-environment-variables-action
     - uses: FranzDiebold/github-env-vars-action@v2
-    - shell: bash
+    # Figure out the namespace and environment name, which should be up to 63 chars in length for Kubernetes
+    - uses: web3j/substr-action@v1.2
+      id: substring-env-name
+      with:
+        value: "${{ env.CI_REPOSITORY_NAME }}-${{ env.CI_REF_NAME_SLUG }}"
+        start: '0'
+        length: '63'
+    - id: set-envs
+      shell: bash
       run: |
-        echo "SLUG=CI_SHA" >> $GITHUB_ENV
+        echo "SLUG=$CI_SHA" >> $GITHUB_ENV
+      # This will strip tailing dash characters, necessary because we can't have dash suffixed strings in Kubernetes
+        export STRIPPED_STRING=`echo "${{ steps.substring-env-name.outputs.result }}" | sed 's/-*$//g'`
+        echo "ENV_NAME=$STRIPPED_STRING >> $GITHUB_ENV"
+        echo "ENV_URL=https://${STRIPPED_STRING}.couchers.dev >> $GITHUB_ENV"
