--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/build-push-ecr
         with:
-          module-name: web
+          module-name: frontend
+          src-path: ./
 
 
   test-web:
