--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -54,7 +54,7 @@ jobs:
 
   set-env:
     runs-on: [self-hosted, master]
-    needs: [test-web, test-web-prettier, test-storybook]
+    #needs: [test-web, test-web-prettier, test-storybook]
     outputs:
       environment_name: ${{ steps.set-envs.outputs.envname }}
       environment_url: ${{ steps.set-envs.outputs.envurl }}
