--- a/.github/actions/helm-deploy/action.yml
+++ b/.github/actions/helm-deploy/action.yml
@@ -3,7 +3,7 @@
 inputs:
   environment-slug:
     required: true
-  envionment-name:
+  environment-name:
     required: true
   module-name:
     required: true
