--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -22,39 +22,39 @@ jobs:
           src-path: ./
 
 
-  test-web:
-    runs-on: [self-hosted, master]
-    needs: build
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/actions/generate-protos
-      - run: |
-          yarn install
-          yarn test-ci
+  # test-web:
+  #   runs-on: [self-hosted, master]
+  #   needs: build
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: ./.github/actions/generate-protos
+  #     - run: |
+  #         yarn install
+  #         yarn test-ci
 
-  test-web-prettier:
-    runs-on: [self-hosted, master]
-    needs: build
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/actions/generate-protos
-      - run: |
-          yarn install
-          yarn prettier --check *
-
-  test-storybook:
-    runs-on: [self-hosted, master]
-    needs: build
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/actions/generate-protos
-      - run: |
-          yarn install
-          yarn build-storybook
+  # test-web-prettier:
+  #   runs-on: [self-hosted, master]
+  #   needs: build
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: ./.github/actions/generate-protos
+  #     - run: |
+  #         yarn install
+  #         yarn prettier --check *
+  #
+  # test-storybook:
+  #   runs-on: [self-hosted, master]
+  #   needs: build
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: ./.github/actions/generate-protos
+  #     - run: |
+  #         yarn install
+  #         yarn build-storybook
 
   set-env:
     runs-on: [self-hosted, master]
-    needs: [test-web, test-web-prettier, test-storybook]
+    needs: build # [test-web, test-web-prettier, test-storybook]
     outputs:
       environment_name: ${{ steps.set-envs.outputs.envname }}
       environment_url: ${{ steps.set-envs.outputs.envurl }}
