--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: [self-hosted, master]
     steps:
       - uses: actions/checkout@v2
+      - uses: ./.github/actions/generate-protos
       - uses: ./.github/actions/build-push-ecr
         with:
           module-name: frontend
