--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -37,27 +37,25 @@ deployment:
   # Only specify the values you need to override from the defaults
   livenessProbe:
     enabled: true
-    initialDelaySeconds: 480
     path: /
 
   # readinessProbes are used to determine when a container is ready to start accepting traffic
   # Only specify the values you need to override from the defaults
   readinessProbe:
     enabled: true
-    initialDelaySeconds: 480
     path: /
 
   # deployment container resource requests/limits
   # this is set VERY low by default, to be aggressive above resource limiting, please override this if necessary
   # Note: Limits are HARD Limits
   #       Requests are "soft" limits and are what affects HPA (autoscaling) aggressiveness if HPA is enabled
-  # resources:
-  #   limits:
-  #    cpu: 100m
-  #    memory: 100Mi
-  #   requests:
-  #    cpu: 100m
-  #    memory: 100Mi
+  resources:
+    limits:
+     cpu: 200m
+     #memory: 500Mi
+    requests:
+     cpu: 200m
+     #memory: 500Mi
 
   # Enable autoscaling (prod only usually, if needed)
   autoscaling:
