--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -37,13 +37,13 @@ deployment:
   # Only specify the values you need to override from the defaults
   livenessProbe:
     enabled: true
-    path: /
+    probeType: tcpSocket
 
   # readinessProbes are used to determine when a container is ready to start accepting traffic
   # Only specify the values you need to override from the defaults
   readinessProbe:
     enabled: true
-    path: /
+    probeType: tcpSocket
 
   # deployment container resource requests/limits
   # this is set VERY low by default, to be aggressive above resource limiting, please override this if necessary
@@ -51,7 +51,7 @@ deployment:
   #       Requests are "soft" limits and are what affects HPA (autoscaling) aggressiveness if HPA is enabled
   resources:
     limits:
-     cpu: 200m
+     cpu: 1000m
      #memory: 500Mi
     requests:
      cpu: 200m
