fix env setup in deploy workflow

--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -65,6 +65,7 @@ jobs:
       environment_url: ${{ steps.set-envs.outputs.envurl }}
       environment_slug: "dev"
     steps:
+      - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-env
       - id: set-envs
         run: |
