re-enable tests. Switch to staging.couchers.dev and set up a redirect from next

--- a/deployment/values-dev.yaml
+++ b/deployment/values-dev.yaml
@@ -1,7 +1,7 @@
 deployment:
   ingress:
     hosts:
-      - host: '{{ (include "namespace" .) }}.couchers.dev'
+      - host: couchers.dev
         paths:
           - /
 envFile: .env.development
