--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -23,35 +23,35 @@ jobs:
           src-path: ./
 
 
-  # test-web:
-  #   runs-on: [self-hosted, master]
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/generate-protos
-  #     - run: |
-  #         yarn install
-  #         yarn test-ci
+  test-web:
+    runs-on: [self-hosted, master]
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/generate-protos
+      - run: |
+          yarn install
+          yarn test-ci
 
-  # test-web-prettier:
-  #   runs-on: [self-hosted, master]
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/generate-protos
-  #     - run: |
-  #         yarn install
-  #         yarn prettier --check *
-  #
-  # test-storybook:
-  #   runs-on: [self-hosted, master]
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/generate-protos
-  #     - run: |
-  #         yarn install
-  #         yarn build-storybook
+  test-web-prettier:
+    runs-on: [self-hosted, master]
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/generate-protos
+      - run: |
+          yarn install
+          yarn prettier --check *
+
+  test-storybook:
+    runs-on: [self-hosted, master]
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/generate-protos
+      - run: |
+          yarn install
+          yarn build-storybook
 
 
 
