--- a/.github/workflows/staging-deploy-on-merge.yml
+++ b/.github/workflows/staging-deploy-on-merge.yml
@@ -3,7 +3,8 @@ name: Staging - Deploy Frontend on Merge
 on:
   pull_request:
     types: [closed]
-    branches: [master]
+    branches: [ci_github_actions]
+    # branches: [master]
 
 defaults:
   run:
