--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -3,8 +3,9 @@ name: Dev - Deploy Frontend on Push
 on:
   push:
     branches-ignore:
-      - master
-      - master-hotfix
+      - ci_github_actions
+      # - master
+      # - master-hotfix
 
 defaults:
   run:
