--- a/deployment/values-staging.yaml
+++ b/deployment/values-staging.yaml
@@ -1,7 +1,7 @@
 deployment:
   ingress:
     hosts:
-      - host: '{{ (include "namespace" .) }}.couchers.dev'
+      - host: staging.couchers.dev
         paths:
           - /
 
