--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -1,14 +1,18 @@
 # Set up all of the CI env vars required for Couchers
+
 runs:
   using: "composite"
   steps:
     # Get clean environment variables via https://github.com/marketplace/actions/github-environment-variables-action
     - uses: FranzDiebold/github-env-vars-action@v2
+    - shell: bash
+      run: |
+        echo "REF_SLUG=${CI_REF_NAME_SLUG:-$CI_HEAD_REF_SLUG}" >> $GITHUB_ENV # Use whichever env ref is supplied (push or merge).
     # Figure out the namespace and environment name, which should be up to 63 chars in length for Kubernetes
     - uses: web3j/substr-action@v1.2
       id: substring-env-name
       with:
-        value: "${{ env.CI_REPOSITORY_NAME }}-${{ env.CI_REF_NAME_SLUG }}"
+        value: "${{ env.CI_REPOSITORY_NAME }}-${{ env.REF_SLUG }}"
         start: '0'
         length: '63'
     - id: set-envs
