--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -51,11 +51,11 @@ deployment:
   #       Requests are "soft" limits and are what affects HPA (autoscaling) aggressiveness if HPA is enabled
   resources:
     limits:
-     cpu: 1000m
-     #memory: 500Mi
+     cpu: 2000m
+     memory: 4096Mi
     requests:
-     cpu: 200m
-     #memory: 500Mi
+     cpu: 500m
+     memory: 512Mi
 
   # Enable autoscaling (prod only usually, if needed)
   autoscaling:
