add prod deployment and separate prod docker image

--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -23,6 +23,18 @@ jobs:
           module-name: frontend
           src-path: ./
 
+  build-prod:
+    runs-on: [self-hosted, master]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/generate-protos
+      - uses: ./.github/actions/build-push-ecr
+        with:
+          module-name: frontend
+          extra-build-args: -f prod.Dockerfile
+          image-name: frontend-prod
+          src-path: ./
+
 
   test-web:
     runs-on: [self-hosted, master]
