revert branch names used for testing

--- a/.github/workflows/dev-remove-environment-after-merge.yml
+++ b/.github/workflows/dev-remove-environment-after-merge.yml
@@ -10,8 +10,7 @@ name: Dev - After Merge Into Master, Cleanup
 on:
   pull_request:
     types: [closed]
-    branches: [ci_github_actions]
-    # branches: [master]
+    branches: [master]
 
 defaults:
   run:
