--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -3,9 +3,8 @@ name: Dev - Deploy Frontend on Push
 on:
   push:
     branches-ignore:
-      - ci_github_actions
-      # - master
-      # - master-hotfix
+      - master
+      - master-hotfix
 
 defaults:
   run:
