CI/CD and env changes to run with new repo

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,5 @@
 proto/
+proto_src/
 /markdown/
 node_modules
 **/locales/*.json
@@ -10,3 +11,6 @@ ci-build-protos.sh
 *.Dockerfile
 *.log
 yarn.lock
+Dockerfile
+generate_protos.sh
+deployment/
